# task.1.7

./: CMakeLists.txt
src/: CMakeLists.txt  my_regex.cxx  my_regex.hxx
tests/: CMakeLists.txt  regex_test.cxx
tests/text/: single_test_1.txt  vowel_test_1.txt
